--- a/config.yml
+++ b/config.yml
@@ -50,7 +50,7 @@ params:
 
     label:
         text: "Home"
-        icon: /apple-touch-icon.png
+        #icon: /apple-touch-icon.png
         iconHeight: 35
 
     # profile-mode
@@ -77,7 +77,7 @@ params:
         - name: twitter
           url: "https://twitter.com/"
         - name: github
-          url: "https://github.com/"
+          url: "https://github.com/Shinichii"
 
    # analytics:
    #     google:
